tests/idris2/basic011/expected
1/1: Building Dots1 (Dots1.idr)
1/1: Building Dots2 (Dots2.idr)
Error: While processing left hand side of foo. Can't match on ?x [no locals in scope] (Non linear pattern variable).

Dots2:2:7--2:8
 1 | foo : Int -> Int -> Int
 2 | foo x x = x + x
           ^

1/1: Building Dots3 (Dots3.idr)
Error: While processing left hand side of addBaz. Pattern variable z unifies with: ?y [no locals in scope].

Dots3:5:13--5:30
   |
 5 | addBaz (x + y) (AddThings x z) = x + y
   |             ^               ^

Suggestion: Use the same name for both pattern variables, since they unify.
